[gd_scene load_steps=24 format=3 uid="uid://bt3xl0r2iichp"]

[ext_resource type="Script" path="res://Scripts/Characters/b_2_md.gd" id="1_4s6gi"]
[ext_resource type="Texture2D" uid="uid://cupebuxoalkhd" path="res://Assets/Sprites/Characters/B2-MD/Idle/Idle0.png" id="2_poqvp"]
[ext_resource type="Texture2D" uid="uid://cnpyl2bnwejc7" path="res://Assets/Sprites/Characters/B2-MD/Jump/Jump0.png" id="3_y0ca6"]
[ext_resource type="Texture2D" uid="uid://duvdg3smvn7rh" path="res://Assets/Sprites/Characters/B2-MD/walk/walk0.png" id="4_5d0b6"]
[ext_resource type="Texture2D" uid="uid://cks03rt48iaxm" path="res://Assets/Sprites/Characters/B2-MD/walk/walk1.png" id="5_kfubc"]
[ext_resource type="Script" path="res://godot_state_charts/state_chart.gd" id="6_g6bpu"]
[ext_resource type="Script" path="res://godot_state_charts/compound_state.gd" id="7_o6vms"]
[ext_resource type="Script" path="res://godot_state_charts/atomic_state.gd" id="8_sip4g"]
[ext_resource type="Script" path="res://godot_state_charts/transition.gd" id="9_eymso"]
[ext_resource type="Script" path="res://godot_state_charts/expression_guard.gd" id="10_e7cdb"]

[sub_resource type="SpriteFrames" id="SpriteFrames_mpfo3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_poqvp")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_y0ca6")
}],
"loop": true,
"name": &"Jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_5d0b6")
}, {
"duration": 1.0,
"texture": ExtResource("2_poqvp")
}, {
"duration": 1.0,
"texture": ExtResource("5_kfubc")
}, {
"duration": 1.0,
"texture": ExtResource("2_poqvp")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qk8fk"]
size = Vector2(54, 282)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m6p6v"]
size = Vector2(54, 147)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p62nx"]
size = Vector2(85, 290)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4g3e0"]
size = Vector2(87, 154)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xxxf5"]
size = Vector2(84.5, 47)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ewvth"]
size = Vector2(84, 190)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sjscd"]
size = Vector2(115.5, 152)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cifkf"]
size = Vector2(144.5, 103)

[sub_resource type="Resource" id="Resource_gd8lg"]
script = ExtResource("10_e7cdb")
expression = "if double_jump == false and jump == true"

[sub_resource type="Animation" id="Animation_4tpb7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attacks/punch:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_vvcr8"]
resource_name = "punch"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attacks/punch:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.133333, 0.366667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ag4xd"]
_data = {
"RESET": SubResource("Animation_4tpb7"),
"punch": SubResource("Animation_vvcr8")
}

[node name="B2-MD" type="CharacterBody2D" groups=["Player"]]
collision_layer = 524288
collision_mask = 524288
script = ExtResource("1_4s6gi")

[node name="Player_animations" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -3)
sprite_frames = SubResource("SpriteFrames_mpfo3")
animation = &"Jump"

[node name="Idle" type="CollisionShape2D" parent="."]
position = Vector2(1, 6)
shape = SubResource("RectangleShape2D_qk8fk")
debug_color = Color(0.622259, 0.365741, 5.77569e-07, 0.42)

[node name="Jump" type="CollisionShape2D" parent="."]
position = Vector2(1, 6)
shape = SubResource("RectangleShape2D_qk8fk")
debug_color = Color(0.622259, 0.365741, 5.77569e-07, 0.42)

[node name="Crouch" type="CollisionShape2D" parent="."]
position = Vector2(1, 73.5)
shape = SubResource("RectangleShape2D_m6p6v")
debug_color = Color(0.622259, 0.365741, 5.77569e-07, 0.42)

[node name="Hit_Box" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="Idle" type="CollisionShape2D" parent="Hit_Box"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_p62nx")
debug_color = Color(1, 0.0666667, 0, 0.419608)

[node name="Jump" type="CollisionShape2D" parent="Hit_Box"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_p62nx")
debug_color = Color(1, 0.0666667, 0, 0.419608)

[node name="Crouch" type="CollisionShape2D" parent="Hit_Box"]
position = Vector2(0.5, 77)
shape = SubResource("RectangleShape2D_4g3e0")
debug_color = Color(0.72549, 0.105882, 0.0627451, 1)

[node name="Grab_Box" type="Area2D" parent="."]
disable_mode = 1
collision_layer = 512
collision_mask = 512

[node name="Idle" type="CollisionShape2D" parent="Grab_Box"]
position = Vector2(1, 6)
shape = SubResource("RectangleShape2D_qk8fk")
debug_color = Color(0.622259, 0.365741, 5.77569e-07, 0.42)

[node name="Jump" type="CollisionShape2D" parent="Grab_Box"]
position = Vector2(1, 6)
shape = SubResource("RectangleShape2D_qk8fk")
debug_color = Color(0.622259, 0.365741, 5.77569e-07, 0.42)

[node name="Crouch" type="CollisionShape2D" parent="Grab_Box"]
position = Vector2(2, 79.5)
shape = SubResource("RectangleShape2D_m6p6v")
debug_color = Color(0.622259, 0.365741, 5.77569e-07, 0.42)

[node name="Attacks" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="punch" type="CollisionShape2D" parent="Attacks"]
position = Vector2(-81.75, -80)
shape = SubResource("RectangleShape2D_xxxf5")
disabled = true
debug_color = Color(0, 1, 0, 0.419608)

[node name="kick" type="CollisionShape2D" parent="Attacks"]
position = Vector2(-82, 57)
shape = SubResource("RectangleShape2D_ewvth")
disabled = true
debug_color = Color(0, 1, 0, 0.419608)

[node name="slash" type="CollisionShape2D" parent="Attacks"]
position = Vector2(-94.25, -29)
shape = SubResource("RectangleShape2D_sjscd")
disabled = true
debug_color = Color(0, 1, 0, 0.419608)

[node name="heavy" type="CollisionShape2D" parent="Attacks"]
position = Vector2(-109.75, -52.5)
shape = SubResource("RectangleShape2D_cifkf")
disabled = true
debug_color = Color(0, 1, 0, 0.419608)

[node name="timers" type="Node" parent="."]

[node name="dash" type="Timer" parent="timers"]
process_callback = 0
wait_time = 0.2
one_shot = true

[node name="punch" type="Node" parent="timers"]

[node name="punch" type="Timer" parent="timers/punch"]
process_callback = 0
wait_time = 0.5
one_shot = true

[node name="kick" type="Node" parent="timers"]

[node name="slash" type="Node" parent="timers"]

[node name="heavy" type="Node" parent="timers"]

[node name="StateChart" type="Node" parent="."]
script = ExtResource("6_g6bpu")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("7_o6vms")
initial_state = NodePath("Jump")

[node name="Idle" type="Node" parent="StateChart/Root"]
script = ExtResource("8_sip4g")

[node name="Walk" type="Node" parent="StateChart/Root/Idle"]
script = ExtResource("9_eymso")
to = NodePath("../../Walk")
event = &"to_walk"
delay_in_seconds = "0.0"

[node name="Jump" type="Node" parent="StateChart/Root/Idle"]
script = ExtResource("9_eymso")
to = NodePath("../../Jump")
event = &"to_jump"
delay_in_seconds = "0.0"

[node name="Crouch" type="Node" parent="StateChart/Root/Idle"]
script = ExtResource("9_eymso")
to = NodePath("../../Crouch")
event = &"to_crouch"
delay_in_seconds = "0.0"

[node name="Hitstun" type="Node" parent="StateChart/Root/Idle"]
script = ExtResource("9_eymso")
to = NodePath("../../Hitstun")
event = &"to_hitstun"
delay_in_seconds = "0.0"

[node name="Juggled" type="Node" parent="StateChart/Root/Idle"]
script = ExtResource("9_eymso")
to = NodePath("../../Juggled")
event = &"to_juggled"
delay_in_seconds = "0.0"

[node name="Attack" type="Node" parent="StateChart/Root/Idle"]
script = ExtResource("9_eymso")
to = NodePath("../../Attacking")
event = &"to_attacking"
delay_in_seconds = "0.0"

[node name="Walk" type="Node" parent="StateChart/Root"]
script = ExtResource("8_sip4g")

[node name="Idle" type="Node" parent="StateChart/Root/Walk"]
script = ExtResource("9_eymso")
to = NodePath("../../Idle")
event = &"to_idle"
delay_in_seconds = "0.0"

[node name="Jump" type="Node" parent="StateChart/Root/Walk"]
script = ExtResource("9_eymso")
to = NodePath("../../Jump")
event = &"to_jump"
delay_in_seconds = "0.0"

[node name="Crouch" type="Node" parent="StateChart/Root/Walk"]
script = ExtResource("9_eymso")
to = NodePath("../../Crouch")
event = &"to_crouch"
delay_in_seconds = "0.0"

[node name="Step-Dash" type="Node" parent="StateChart/Root/Walk"]
script = ExtResource("9_eymso")
to = NodePath("../../Step-Dash")
event = &"to_dash"
delay_in_seconds = "0.0"

[node name="Hitstun" type="Node" parent="StateChart/Root/Walk"]
script = ExtResource("9_eymso")
to = NodePath("../../Hitstun")
event = &"to_hitstun"
delay_in_seconds = "0.0"

[node name="Juggled" type="Node" parent="StateChart/Root/Walk"]
script = ExtResource("9_eymso")
to = NodePath("../../Juggled")
event = &"to_juggled"
delay_in_seconds = "0.0"

[node name="Attack" type="Node" parent="StateChart/Root/Walk"]
script = ExtResource("9_eymso")
to = NodePath("../../Attacking")
event = &"to_attacking"
delay_in_seconds = "0.0"

[node name="Crouch" type="Node" parent="StateChart/Root"]
script = ExtResource("8_sip4g")

[node name="Idle" type="Node" parent="StateChart/Root/Crouch"]
script = ExtResource("9_eymso")
to = NodePath("../../Idle")
event = &"to_idle"
delay_in_seconds = "0.0"

[node name="Hitstun" type="Node" parent="StateChart/Root/Crouch"]
script = ExtResource("9_eymso")
to = NodePath("../../Hitstun")
event = &"to_hitstun"
delay_in_seconds = "0.0"

[node name="Juggled" type="Node" parent="StateChart/Root/Crouch"]
script = ExtResource("9_eymso")
to = NodePath("../../Juggled")
event = &"to_juggled"
delay_in_seconds = "0.0"

[node name="Attack" type="Node" parent="StateChart/Root/Crouch"]
script = ExtResource("9_eymso")
to = NodePath("..")
event = &"to_attack"
delay_in_seconds = "0.0"

[node name="Jump" type="Node" parent="StateChart/Root"]
script = ExtResource("8_sip4g")

[node name="Idle" type="Node" parent="StateChart/Root/Jump"]
script = ExtResource("9_eymso")
to = NodePath("../../Idle")
event = &"to_idle"
delay_in_seconds = "0.0"

[node name="Walk" type="Node" parent="StateChart/Root/Jump"]
script = ExtResource("9_eymso")
to = NodePath("../../Walk")
event = &"to_walk"
delay_in_seconds = "0.0"

[node name="Juggled" type="Node" parent="StateChart/Root/Jump"]
script = ExtResource("9_eymso")
to = NodePath("../../Juggled")
event = &"to_juggled"
delay_in_seconds = "0.0"

[node name="Attack" type="Node" parent="StateChart/Root/Jump"]
script = ExtResource("9_eymso")
to = NodePath("..")
event = &"to_attack"
delay_in_seconds = "0.0"

[node name="Jump" type="Node" parent="StateChart/Root/Jump"]
script = ExtResource("9_eymso")
to = NodePath("..")
event = &"to_jump"
guard = SubResource("Resource_gd8lg")
delay_in_seconds = "0.0"

[node name="Step-Dash" type="Node" parent="StateChart/Root"]
script = ExtResource("8_sip4g")

[node name="Idle" type="Node" parent="StateChart/Root/Step-Dash"]
script = ExtResource("9_eymso")
to = NodePath("../../Idle")
event = &"to_idle"
delay_in_seconds = "0.0"

[node name="Hitstun" type="Node" parent="StateChart/Root/Step-Dash"]
script = ExtResource("9_eymso")
to = NodePath("../../Hitstun")
event = &"to_hitstun"
delay_in_seconds = "0.0"

[node name="Juggled" type="Node" parent="StateChart/Root/Step-Dash"]
script = ExtResource("9_eymso")
to = NodePath("../../Juggled")
event = &"to_juggled"
delay_in_seconds = "0.0"

[node name="Attack" type="Node" parent="StateChart/Root/Step-Dash"]
script = ExtResource("9_eymso")
to = NodePath("..")
event = &"to_attack"
delay_in_seconds = "0.0"

[node name="Hitstun" type="Node" parent="StateChart/Root"]
script = ExtResource("8_sip4g")

[node name="Idle" type="Node" parent="StateChart/Root/Hitstun"]
script = ExtResource("9_eymso")
to = NodePath("../../Idle")
event = &"to_idle"
delay_in_seconds = "0.0"

[node name="Juggled" type="Node" parent="StateChart/Root"]
script = ExtResource("8_sip4g")

[node name="Idle" type="Node" parent="StateChart/Root/Juggled"]
script = ExtResource("9_eymso")
to = NodePath("../../Idle")
event = &"to_idle"
delay_in_seconds = "0.0"

[node name="Knocked_Down" type="Node" parent="StateChart/Root/Juggled"]
script = ExtResource("9_eymso")
to = NodePath("../../Knocked_Down")
event = &"to_knocked_down"
delay_in_seconds = "0.0"

[node name="Attacking" type="Node" parent="StateChart/Root"]
script = ExtResource("8_sip4g")

[node name="Knocked_Down" type="Node" parent="StateChart/Root"]
script = ExtResource("8_sip4g")

[node name="Idle" type="Node" parent="StateChart/Root/Knocked_Down"]
script = ExtResource("9_eymso")
to = NodePath("../../Idle")
event = &"to_idle"
delay_in_seconds = "0.0"

[node name="Attacks_ani" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ag4xd")
}

[connection signal="timeout" from="timers/dash" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="timers/punch/punch" to="." method="_on_punch_timeout"]
[connection signal="state_entered" from="StateChart/Root/Idle" to="." method="_on_idle_state_entered"]
[connection signal="state_exited" from="StateChart/Root/Idle" to="." method="_on_idle_state_exited"]
[connection signal="state_physics_processing" from="StateChart/Root/Idle" to="." method="_on_idle_state_physics_processing"]
[connection signal="state_processing" from="StateChart/Root/Idle" to="." method="_on_idle_state_processing"]
[connection signal="state_entered" from="StateChart/Root/Walk" to="." method="_on_walk_state_entered"]
[connection signal="state_exited" from="StateChart/Root/Walk" to="." method="_on_walk_state_exited"]
[connection signal="state_physics_processing" from="StateChart/Root/Walk" to="." method="_on_walk_state_physics_processing"]
[connection signal="state_processing" from="StateChart/Root/Walk" to="." method="_on_walk_state_processing"]
[connection signal="state_entered" from="StateChart/Root/Crouch" to="." method="_on_crouch_state_entered"]
[connection signal="state_exited" from="StateChart/Root/Crouch" to="." method="_on_crouch_state_exited"]
[connection signal="state_physics_processing" from="StateChart/Root/Crouch" to="." method="_on_crouch_state_physics_processing"]
[connection signal="state_processing" from="StateChart/Root/Crouch" to="." method="_on_crouch_state_processing"]
[connection signal="state_entered" from="StateChart/Root/Jump" to="." method="_on_jump_state_entered"]
[connection signal="state_exited" from="StateChart/Root/Jump" to="." method="_on_jump_state_exited"]
[connection signal="state_physics_processing" from="StateChart/Root/Jump" to="." method="_on_jump_state_physics_processing"]
[connection signal="state_processing" from="StateChart/Root/Jump" to="." method="_on_jump_state_processing"]
[connection signal="state_entered" from="StateChart/Root/Step-Dash" to="." method="_on_step_dash_state_entered"]
[connection signal="state_exited" from="StateChart/Root/Step-Dash" to="." method="_on_step_dash_state_exited"]
[connection signal="state_physics_processing" from="StateChart/Root/Step-Dash" to="." method="_on_step_dash_state_physics_processing"]
[connection signal="state_processing" from="StateChart/Root/Step-Dash" to="." method="_on_step_dash_state_processing"]
[connection signal="state_entered" from="StateChart/Root/Hitstun" to="." method="_on_hitstun_state_entered"]
[connection signal="state_exited" from="StateChart/Root/Hitstun" to="." method="_on_hitstun_state_exited"]
[connection signal="state_physics_processing" from="StateChart/Root/Hitstun" to="." method="_on_hitstun_state_physics_processing"]
[connection signal="state_processing" from="StateChart/Root/Hitstun" to="." method="_on_hitstun_state_processing"]
[connection signal="state_entered" from="StateChart/Root/Juggled" to="." method="_on_juggled_state_entered"]
[connection signal="state_exited" from="StateChart/Root/Juggled" to="." method="_on_juggled_state_exited"]
[connection signal="state_physics_processing" from="StateChart/Root/Juggled" to="." method="_on_juggled_state_physics_processing"]
[connection signal="state_processing" from="StateChart/Root/Juggled" to="." method="_on_juggled_state_processing"]
[connection signal="state_entered" from="StateChart/Root/Attacking" to="." method="_on_attacking_state_entered"]
[connection signal="state_exited" from="StateChart/Root/Attacking" to="." method="_on_attacking_state_exited"]
[connection signal="state_physics_processing" from="StateChart/Root/Attacking" to="." method="_on_attacking_state_physics_processing"]
[connection signal="state_processing" from="StateChart/Root/Attacking" to="." method="_on_attacking_state_processing"]
[connection signal="state_entered" from="StateChart/Root/Knocked_Down" to="." method="_on_knocked_down_state_entered"]
[connection signal="state_exited" from="StateChart/Root/Knocked_Down" to="." method="_on_knocked_down_state_exited"]
[connection signal="state_physics_processing" from="StateChart/Root/Knocked_Down" to="." method="_on_knocked_down_state_physics_processing"]
[connection signal="state_processing" from="StateChart/Root/Knocked_Down" to="." method="_on_knocked_down_state_processing"]
[connection signal="animation_finished" from="Attacks_ani" to="." method="_on_attacks_ani_animation_finished"]
